# mini-beryl

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  invokes.ts  main.ts  routers.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  global.rs  main.rs  sensor.rs
src-tauri/src/modes/: hall_effect.rs  mod.rs  normal.rs
src-tauri/src/utils/: hardware.rs  mod.rs  processing.rs
src/components/: Chart.vue  Greet.vue  Hall.vue  HallChart.vue  config.ts
