[package]
name = "mini-beryl"
version = "0.0.1"
description = "Mini beryl DS Sensor visualizer"
authors = ["Shidi XIA"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3.0"
crossbeam-channel = "0.5.12"
crossbeam-utils = "0.8.19"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
